# mec5_i3c_app

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
app/boards/: mec_assy6941_mec1753qlj.overlay  mec_assy6941_mec1753qsz.overlay
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/introspect_i3c/: CMakeLists.txt  Kconfig  Kconfig.mec5  introspect.c
dts/bindings/i3c/: microchip,introspect_i3c.yaml
include/app/drivers/: introspect_i3c.h
